src/parser/snapshots/lucid_lint__parser__markdown__tests__snapshot_en_code_block_excluded.snap
---
source: src/parser/markdown.rs
expression: trees
---
[
    [
        Text(
            "Before italics.",
        ),
    ],
    [
        Text(
            "After ",
        ),
        Emphasis(
            EmphasisSpan {
                children: [
                    Text(
                        "real italics",
                    ),
                ],
                start_line: 7,
                start_column: 7,
            },
        ),
        Text(
            " end.",
        ),
    ],
]
