src/parser/snapshots/lucid_lint__parser__markdown__tests__snapshot_en_plain_paragraph.snap
---
source: src/parser/markdown.rs
expression: trees
---
[
    [
        Text(
            "Plain prose, nothing fancy here.",
        ),
    ],
]
