src/parser/snapshots/lucid_lint__parser__markdown__tests__snapshot_en_single_emphasis.snap
---
source: src/parser/markdown.rs
expression: trees
---
[
    [
        Text(
            "Some ",
        ),
        Emphasis(
            EmphasisSpan {
                children: [
                    Text(
                        "italic words",
                    ),
                ],
                start_line: 1,
                start_column: 6,
            },
        ),
        Text(
            " in the middle of prose.",
        ),
    ],
]
