src/parser/snapshots/lucid_lint__parser__markdown__tests__snapshot_en_strong_does_not_create_emphasis.snap
---
source: src/parser/markdown.rs
expression: trees
---
[
    [
        Text(
            "A line with strong words but no italic.",
        ),
    ],
]
