src/parser/snapshots/lucid_lint__parser__markdown__tests__snapshot_en_tight_list_item_with_emphasis.snap
---
source: src/parser/markdown.rs
expression: trees
---
[
    [
        Text(
            "bullet with ",
        ),
        Emphasis(
            EmphasisSpan {
                children: [
                    Text(
                        "italic phrase",
                    ),
                ],
                start_line: 1,
                start_column: 15,
            },
        ),
        Text(
            " inside.",
        ),
    ],
]
