src/parser/snapshots/lucid_lint__parser__markdown__tests__snapshot_fr_nested_emphasis_with_accents.snap
---
source: src/parser/markdown.rs
expression: trees
---
[
    [
        Text(
            "Élève ",
        ),
        Emphasis(
            EmphasisSpan {
                children: [
                    Text(
                        "attentif ",
                    ),
                    Emphasis(
                        EmphasisSpan {
                            children: [
                                Text(
                                    "très",
                                ),
                            ],
                            start_line: 1,
                            start_column: 17,
                        },
                    ),
                    Text(
                        " concentré",
                    ),
                ],
                start_line: 1,
                start_column: 7,
            },
        ),
        Text(
            " ici.",
        ),
    ],
]
