src/parser/snapshots/lucid_lint__parser__markdown__tests__snapshot_fr_single_emphasis.snap
---
source: src/parser/markdown.rs
expression: trees
---
[
    [
        Text(
            "Une phrase avec ",
        ),
        Emphasis(
            EmphasisSpan {
                children: [
                    Text(
                        "des mots en italique",
                    ),
                ],
                start_line: 1,
                start_column: 17,
            },
        ),
        Text(
            " au milieu.",
        ),
    ],
]
